tests/fail/transmute-pair-uninit.stderr
error: Undefined Behavior: constructing invalid value: encountered uninitialized bytes, but expected initialized bytes
  --> $DIR/transmute-pair-uninit.rs:LL:CC
   |
LL |     let v = unsafe { *z.offset(first_undef) };
   |                      ^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered uninitialized bytes, but expected initialized bytes
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `main` at $DIR/transmute-pair-uninit.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

